# sm-mlops-autoretrain-template

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: autopilot.yaml  pipeline.yaml  project.yaml  s3_paths.yaml  tags.yaml
docker/: inference.Dockerfile  notebooks.Dockerfile  training.Dockerfile
docs/: architecture.md  autopilot_model_selection.md  data_versioning.md  pipeline_autoretrain.md  rnd_environment.md
infra/cdk/: app.py  requirements.txt
infra/cdk/stacks/: eventbridge_stack.py  iam_stack.py  monitoring_stack.py  pipeline_stack.py  s3_stack.py  sagemaker_stack.py
notebooks/: 00_setup_and_smoke_test.ipynb  01_dummy_data_exploration.ipynb  02_baseline_nn_local_train.ipynb  03_s3_data_versioning.ipynb  04_sagemaker_pipeline_walkthrough.ipynb  05_autopilot_experiment.ipynb  06_rnd_sandbox.ipynb
scripts/: bootstrap_aws.sh  bootstrap_local.sh  run_autopilot.sh  run_local_train.sh  run_pipeline.sh  teardown.sh
src/cli/: __init__.py  main.py
src/common/: __init__.py  aws.py  config.py  hashing.py  logging.py  metrics.py
src/model/: __init__.py  evaluate.py  export.py  nn.py  register.py  train.py
src/sagemaker/: __init__.py
src/sagemaker/autopilot/: __init__.py  create_job.py  deploy_or_register.py  monitor_job.py  select_best_model.py
src/sagemaker/pipelines/: __init__.py  pipeline.py  run_pipeline.py
src/sagemaker/studio/: __init__.py  bootstrap_domain.py  lifecycle_config.sh
tests/: test_data_fingerprint.py  test_generate_dummy.py  test_pipeline_definition.py  test_training_smoke.py
(+11 files in other folders)
